--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <a-scene>
+<a-entity>
+  <a-entity>
+    
+  </a-entity>
+  <a-animation attribute="rotation"
+               dur="10000"
+               fill="forwards"
+               to="0 360 0"
+               repeat="indefinite">
+  </a-animation>
+ </a-entity>      
       <a-sky src="bg.jpg"></a-sky>
     </a-scene>
   </body>
