--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <a-scene>
-  <a-sky src="bg.jpg"></a-sky>
+        <a-sky src="bg.jpg"></a-sky>
+         <a-animation attribute="rotation" repeat="indefinite" to="0 0 0"></a-animation>
     </a-scene>
   </body>
 </html>
