--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <a-scene>
         <a-sky src="bg.jpg"></a-sky>
-         <a-animation attribute="rotation" repeat="indefinite" to="0 0 0"></a-animation>
+         <a-entity camera><a-entity>
     </a-scene>
   </body>
 </html>
