--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
-        <a-sky src="bg.jpg"></a-sky>
-         <a-entity camera><a-entity>
-    </a-scene>
+    
+       
+         <a-entity camera>
+            <a-sky src="bg.jpg"></a-sky>   
+         <a-entity>
+
   </body>
 </html>
