--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
   </head>
   <body>
-    <a-sence>
+    <a-scene>
         <a-sky src="bg.jpg"></a-sky> 
          <a-entity camera>
              
          <a-entity>
-    </a-sence>
+    </a-sscene>
   </body>
 </html>
