--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <a-scene>
         <a-sky src="bg.jpg"></a-sky> 
-         <a-entity camera>
-             
-         <a-entity>
+         <a-entity camera look-controls><a-entity>
     </a-sscene>
   </body>
 </html>
